// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket quote endpoint error when data length is not valid 1`] = `
{
  "error": {
    "message": "The EA has not received any values from the Data Provider for the requested data yet. Retry after a short delay, and if the problem persists raise this issue in the relevant channels.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 504,
}
`;

exports[`websocket quote endpoint should return ask when bid is 0 1`] = `
{
  "data": {
    "ask_price": 172,
    "ask_volume": 100,
    "bid_price": 0,
    "bid_volume": 148,
    "mid_price": 172,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1670868378000,
  },
}
`;

exports[`websocket quote endpoint should return bid when ask is 0 1`] = `
{
  "data": {
    "ask_price": 0,
    "ask_volume": 100,
    "bid_price": 170,
    "bid_volume": 148,
    "mid_price": 170,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1670868378000,
  },
}
`;

exports[`websocket quote endpoint should return success 1`] = `
{
  "data": {
    "ask_price": 172,
    "ask_volume": 100,
    "bid_price": 170,
    "bid_volume": 148,
    "mid_price": 171,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1670868378000,
  },
}
`;

exports[`websocket quote endpoint should return success for 1st item in multi message 1`] = `
{
  "data": {
    "ask_price": 8,
    "ask_volume": 9,
    "bid_price": 5,
    "bid_volume": 6,
    "mid_price": 6.5,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 7,
  },
}
`;

exports[`websocket quote endpoint should return success for 2nd item in multi message 1`] = `
{
  "data": {
    "ask_price": 17,
    "ask_volume": 18,
    "bid_price": 14,
    "bid_volume": 15,
    "mid_price": 15.5,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 16,
  },
}
`;

exports[`websocket stock endpoint should return success - overnight 1`] = `
{
  "data": {
    "result": 400,
  },
  "result": 400,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 762376399006,
  },
}
`;

exports[`websocket stock endpoint should return success 1`] = `
{
  "data": {
    "result": 462.19,
  },
  "result": 462.19,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1762376399006,
  },
}
`;
